ARA-38 #comment Slider button alignment fixed

--- a/wp-content/themes/aviation/scss/_partners.scss
+++ b/wp-content/themes/aviation/scss/_partners.scss
@@ -36,8 +36,11 @@
       background-color: #0000008a;
       clear: both;
       width: 100%;
-      overflow: hidden;
+      //overflow: hidden;
       padding: 30px;
+      @media all and (max-width: 1350px) {
+        width: 94%;
+      }
       @media all and (max-width: 991px) {
         width: 90%;
       }
@@ -58,6 +61,20 @@
           color: black;
           background-color: #e0e0e0;
           font-size: 40px;
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          line-height: 37px;
+        }
+        .slick-prev{
+          position: absolute;
+          left: -45px;
+          transform: translate(-50%, -25px);
+        }
+        .slick-next{
+          position: absolute;
+          right: -36px;
+          transform: translate(-50%, -25px);
         }
         .slick-slide {
           transition: all ease-in-out .3s;
